// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render areas.content - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<div
  class="emotion-0"
  data-testid="areas.content"
  id="areas.content"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</div>
`;

exports[`Render default - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<div
  class="emotion-0"
  data-testid="default"
  id="default"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</div>
`;

exports[`Render events.onClick - value[0] 1`] = `
.emotion-0 {
  outline: none;
  cursor: pointer;
}

<div
  class="emotion-0"
  data-testid="events.onClick"
  id="events.onClick"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</div>
`;

exports[`Render properties.content - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<div
  class="emotion-0"
  data-testid="properties.content"
  id="properties.content"
>
  Foo
</div>
`;

exports[`Render properties.style - value[0] 1`] = `
.emotion-0 {
  outline: none;
  border: 1px solid blue;
}

<div
  class="emotion-0"
  data-testid="properties.style"
  id="properties.style"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</div>
`;

exports[`Render required = true areas.content - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<div
  class="emotion-0"
  data-testid="areas.content"
  id="areas.content"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</div>
`;

exports[`Render required = true default - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<div
  class="emotion-0"
  data-testid="default"
  id="default"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</div>
`;

exports[`Render required = true events.onClick - value[0] 1`] = `
.emotion-0 {
  outline: none;
  cursor: pointer;
}

<div
  class="emotion-0"
  data-testid="events.onClick"
  id="events.onClick"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</div>
`;

exports[`Render required = true properties.content - value[0] 1`] = `
.emotion-0 {
  outline: none;
}

<div
  class="emotion-0"
  data-testid="properties.content"
  id="properties.content"
>
  Foo
</div>
`;

exports[`Render required = true properties.style - value[0] 1`] = `
.emotion-0 {
  outline: none;
  border: 1px solid blue;
}

<div
  class="emotion-0"
  data-testid="properties.style"
  id="properties.style"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</div>
`;

exports[`Test Schema areas.content 1`] = `true`;

exports[`Test Schema areas.content 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema events.onClick 1`] = `true`;

exports[`Test Schema events.onClick 2`] = `null`;

exports[`Test Schema properties.content 1`] = `true`;

exports[`Test Schema properties.content 2`] = `null`;

exports[`Test Schema properties.style 1`] = `true`;

exports[`Test Schema properties.style 2`] = `null`;

exports[`triggerEvent onClick: 
    .emotion-0 {
      outline: none;
    }

    <div
      class="emotion-0"
      data-testid="one"
      id="one"
    >
      <div
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </div>
   1`] = `
.emotion-0 {
  outline: none;
}

<div
  class="emotion-0"
  data-testid="one"
  id="one"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</div>
`;
